# executor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README  README.64  README.md  TODO
src/: .clang-format  .editorconfig  .gitignore  AE.c  AE.cpp  AE_coercion.c  AE_coercion.cpp  AE_desc.c  AE_desc.cpp  AE_hdlr.c  AE_hdlr.cpp  CBridge.cpp  CMakeLists.txt  COPYING  ChangeLog  FileDouble-OSX.cpp  FileDouble-OSX.h  Makefile.am  NEWS  PSprint.c  PSprint.cpp  PSprint.mm  PSstrings.c  PSstrings.cpp  README  SMELLS.txt  SpeechManager-MacBridge.cpp  SpeechManager-MacBridge.h  SpeechManager-MacBridge.mm  SpeechManager.cpp  THANKS  TODO  TODO.autoconf  TODO.txt  aboutbox.c  aboutbox.cpp  active.map  adb.c  adb.cpp  alias.c  (+538 more)
src/config/: Makefile.in
src/config/arch/alpha/: alpha.c  alpha.h  alpha.make
src/config/arch/generic_le/: CMakeLists.txt  generic_le.cpp  generic_le.h
src/config/arch/i386/: PATBLT_CALLING_CONVENTIONS  i386.c  i386.cpp  i386.h  i386.make  i386_djgpp_version.h  metaasm.pl  opfind.c  opfind.cpp  opfind.h  sbstubtables.cpp  x86patblt.S  x86srcblt.S  xdstubtables.cpp
src/config/arch/m68k/: m68k-call-emulator.s  m68k-callback-handler.s  m68k-callback.c  m68k-destroy.c  m68k-stack.c  m68k-stack.h  m68k-trap-handler.s  m68k.c  m68k.h  m68k.make  make_callback_stubs.pl  syn68k_api.h  trap.S
src/config/arch/powerpc/: powerpc.c  powerpc.h  powerpc.make  ppc_call.c  ppc_stubs.c  ppc_stubs.h
src/config/arch/x86_64/: CMakeLists.txt  x86_64.c  x86_64.cpp  x86_64.h
src/config/front-ends/dos/: NEWdosdisk.c  NEWvga.c  aspi.c  aspi.h  deintr.S  deintr.winnt.s  dos.h  dos.make  dosclip.c  dosdisk.c  dosdisk.h  dosevents.c  dosevents.h  dosevq.c  dosevq.h  dosevq_defs.h  dosmem.c  dosmem.h  dosmem.test  dosserial.c  dosserial.h  dpmilock.c  dpmilock.h  host_bltmacros.h  host_vdriver.h  itimer.h  itimer32.c  newcdhack.c  oldaspi.c  vga.c  vga.h  vgatables.c  vgatables.h
src/config/front-ends/nextstep/: Executor.iconheader  Executor.tiff  MacAppClass.h  MacAppClass.m  MacPrintClass.h  MacViewClass.h  MacViewClass.m  MacWinClass.h  MacWinClass.m  NEXT.c  NEXTkeyboard.m  NEXTmain.m  NEXTprint.m  NEXTsound.m  OldMacViewClass.m  blockinterrupts.m  contextswitch.h  docAppl.tiff  docMSW.tiff  docXL.tiff  host_vdriver.h  nextstep.h  nextstep.make.nextstep  nextstep.make.openstep  ourstuff.h  psfns.psw
src/config/front-ends/qt/: CMakeLists.txt  available_geometry.cpp  available_geometry.h  host_vdriver.h  qt.cpp
src/config/front-ends/sdl/: CMakeLists.txt  SDL_bmp.c  SDL_bmp.cpp  SDL_bmp.h  for_sam.h  host_bltmacros.h  host_vdriver.h  macosx_main.m  map.h  sdl.h  sdl.make  sdlX.cpp  sdlX.h  sdl_mem.c  sdl_mem.cpp  sdl_mem.h  sdlevents.c  sdlevents.cpp  sdlevents.h  sdlk_to_mkv.h  sdlquit.cpp  sdlquit.h  sdlscrap.c  sdlscrap.cpp  sdlscrap.h  sdlwin.c  sdlwin.cpp  sdlwm.c  sdlwm.cpp  syswm_map.c  syswm_map.cpp  syswm_map.h  syswm_vars.h  winmain.c
src/config/front-ends/sdl2/: CMakeLists.txt  host_vdriver.h  keycode_map.cpp  keycode_map.h  sdl2.cpp  sdl2_hwnd.h
src/config/front-ends/svgalib/: host_bltmacros.h  host_vdriver.h  svgalib.c  svgalib.h  svgalib.make  svgalibevent.c
src/config/front-ends/win32/: checkkeys.sh  host_vdriver.h  vk_to_mkv.h  win32.h  win32.make  wincursor.c  windib.c  windriver.c  windriver.h  winevents.c
src/config/front-ends/x/: CMakeLists.txt  host_vdriver.h  iv-server.c  sigio_multiplex.cpp  sigio_multiplex.h  x.c  x.cpp  x.h  x.make  x.sh  x_keycodes.c  x_keycodes.cpp  x_keycodes.h
src/config/hosts/alpha-dec-osf/: alpha-lowglobals-mem.c  lowglobals-mem.c
src/config/hosts/i386-msdos-go32/: i386-msdos-go32.h  i386-msdos-go32.make
src/config/hosts/i486-linux/: dummy.c  i486-linux.h  i486-linux.make  lowglobals-mem.c
src/config/hosts/i486-next-ns3/: i486-next-ns3.h  i486-next-ns3.make
src/config/os/cygwin32/: Makefile  cdenable.h  cleanup.c  cygwin32.c  cygwin32.h  cygwin32.make  dosdisk.h  exemove.c  main_windows.h  mmsystem.h  print_main.c  ptest.c  timer.c  timer.h  vwin32.h  vxdiface.h  win_beep.c  win_cdenable.h  win_clip.c  win_clip.h  win_clip_text_forced.c  win_clip_works_for_pict.c  win_cookie.c  win_disk.c  win_dll.h  win_dongle.c  win_dongle.h  (+33 more)
src/config/targets/: config-template.h  config-template.h,v
src/include/: ADB.h  AliasMgr.h  AppleEvents.h  AppleTalk.h  BinaryDecimal.h  CQuickDraw.h  CommTool.h  Components.h  ControlMgr.h  DeskMgr.h  DeviceMgr.h  DialogMgr.h  Disk.h  DiskInit.h  EditionMgr.h  EventMgr.h  ExMacTypes.h  FileMgr.h  Finder.h  FontMgr.h  Gestalt.h  HelpMgr.h  Iconutil.h  IntlUtil.h  ListMgr.h  MacTypes.h  MemoryMgr.h  MenuMgr.h  NotifyMgr.h  OLDSANE.h  OSEvent.h  OSUtil.h  PPC.h  Package.h  PrintMgr.h  ProcessMgr.h  QuickDraw.h  QuickTime.h  ResourceMgr.h  SANE.h  (+22 more)
src/include/rsys/: CFriendly.h  Info.plist  Olibcproto.h  PSstrings.h  Xdefs.h  aboutbox.h  aboutpanel.h  adb.h  alias.h  api-module.h  appearance.h  apple_events.h  arch.h  arrowkeys.h  autorefresh.h  blockdev.h  blockinterrupts.h  byteswap.h  cfm.h  check_structs.h  checkpoint.h  cleanup.h  color_wheel_bits.h  common.h  commonevt.h  cookie.h  cquick.h  crc.h  cruft.h  ctl.h  ctop_ptoc.h  ctopflags.h  custom.h  dcache.h  depthconv.h  desk.h  desperate.h  device.h  dial.h  dirtyrect.h  (+141 more)
src/map_to_c/: map_to_c.1  map_to_c.cpp
src/mkexpandtables/: mkexpandtables.c
src/mkseedtables/: mkseedtables.c
src/mksspairtable/: mksspairtable.c
src/mkultable/: mkultable.c
src/mkvol/: Makefile  mkvol.c  mkvol.cpp  mkvol.h  mkvol_internal.h  scsi_dump.c
src/trap_instances/: ADB.cpp  AliasMgr.cpp  AppleEvents.cpp  BinaryDecimal.cpp  CQuickDraw.cpp  ControlMgr.cpp  DeskMgr.cpp  DialogMgr.cpp  DiskInit.cpp  EditionMgr.cpp  FileMgr.cpp  Finder.cpp  FontMgr.cpp  Gestalt.cpp  HelpMgr.cpp  Iconutil.cpp  IntlUtil.cpp  ListMgr.cpp  MemoryMgr.cpp  MenuMgr.cpp  NotifyMgr.cpp  OSEvent.cpp  OSUtil.cpp  Package.cpp  PrintMgr.cpp  ProcessMgr.cpp  QuickDraw.cpp  QuickTime.cpp  ResourceMgr.cpp  SANE.cpp  ScrapMgr.cpp  ScriptMgr.cpp  SegmentLdr.cpp  ShutDown.cpp  SoundMgr.cpp  SpeechManager.cpp  StdFilePkg.cpp  SysErr.cpp  TextEdit.cpp  TimeMgr.cpp  (+21 more)
(+972 files in other folders)
